test/arrays/diten/array-as-vec-bounds-checking.0-5.good
array-as-vec-bounds-checking.chpl:26: error: halt reached - remove at position 7 out of bounds
